--- a/todo.txt
+++ b/todo.txt
@@ -8,5 +8,5 @@ grabber device - warehouse style
 3. space ais?
 4. missions - high scores
 
-http://slabode.exofire.net/circle_draw.shtml
+Credit circle guy as per http://slabode.exofire.net/circle_draw.shtml
 http://ogldev.atspace.co.uk/www/tutorial03/tutorial03.html
