--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,5 @@
-Fix that level structure bidniss
+Fix that menu-level struct bidniss
+wtf is up with storing width and width2 and all that?
 Hanging Gardens
 Keyboard 2 net control
 Onslaugt
