--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,6 @@
 separate readme for creating levels
 Clean up code
-Build for Windows
+Build for Windows, add \r\n to txt files
 Network test. Do I need to beat my brains out on a keyboard?
 Make sure that font data isn't proprietary...
 Credit circle guy as per http://slabode.exofire.net/circle_draw.shtml
