Scrolling terrain that Cap'n Crunch would be proud of

--- a/todo.txt
+++ b/todo.txt
@@ -1,8 +1,12 @@
 Content:
+  Scrolling ground
+  WUPPL, the Weaponized, Unlimited Power, Parlous Lorry. Truly the transportation of champions.
+  Dropships. They fly around, people hang onto the bottom.
+  AIs specifically designed for piloting and (separately) jumping out of said dropships.
+  A level which combines all four of the above.
   Space windmills!!!
   Beanstalk (A John Scalzi reference - what I actually want is two large, orbitting planets w/ a building holding them apart)
   Spaceships
   Warehouse w/ grabber
   dis-integration ray
   Very wide field, rough center, CTF, dropships.
-  Following, dynamically created ground, a car w/ gun, and assaulting dropships loaded with angry AIs. Badass.
